Little Modification in login page and begin in activity_list_mishap

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
         completions."
     </string>
     <string name="action_sign_out">Sign out</string>
+    <string name="objet_incident">Objet : Vitre cassée</string>
+    <string name="lieu_incident">Lieu : O+229</string>
 </resources>
