be aware of the merge peasant !

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="action_sign_out">Sign out</string>
     <string name="objet_incident">Objet : Vitre cassée</string>
     <string name="lieu_incident">Lieu : O+229</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
